compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__custom_types__const_imported_no_label.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/custom_types.rs
assertion_line: 435
expression: "import other\npub const main = other.Two(1)\n"
snapshot_kind: text
---
----- SOURCE CODE
-- other.gleam
pub type One { Two(Int) }

-- main.gleam
import other
pub const main = other.Two(1)


----- COMPILED JAVASCRIPT
import * as $other from "../other.mjs";

export const main = /* @__PURE__ */ new $other.Two(1);
