compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__custom_types__const_with_fields.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/custom_types.rs
assertion_line: 124
expression: "\npub type Mine {\n  Mine(a: Int, b: Int)\n}\n\npub const labels = Mine(b: 2, a: 1)\npub const no_labels = Mine(3, 4)\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type Mine {
  Mine(a: Int, b: Int)
}

pub const labels = Mine(b: 2, a: 1)
pub const no_labels = Mine(3, 4)


----- COMPILED JAVASCRIPT
import { CustomType as $CustomType } from "../gleam.mjs";

export class Mine extends $CustomType {
  constructor(a, b) {
    super();
    this.a = a;
    this.b = b;
  }
}
export const Mine$Mine = (a, b) => new Mine(a, b);
export const Mine$isMine = (value) => value instanceof Mine;
export const Mine$Mine$a = (value) => value.a;
export const Mine$Mine$0 = (value) => value.a;
export const Mine$Mine$b = (value) => value.b;
export const Mine$Mine$1 = (value) => value.b;

export const labels = /* @__PURE__ */ new Mine(1, 2);

export const no_labels = /* @__PURE__ */ new Mine(3, 4);
