compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__custom_types__const_zero_arity_imported.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/custom_types.rs
assertion_line: 104
expression: "import other\npub const x = other.Two\n"
snapshot_kind: text
---
----- SOURCE CODE
-- other.gleam
pub type One { Two }

-- main.gleam
import other
pub const x = other.Two


----- COMPILED JAVASCRIPT
import * as $other from "../other.mjs";

export const x = /* @__PURE__ */ new $other.Two();
