compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__custom_types__const_zero_arity_imported_unqualified.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/custom_types.rs
assertion_line: 114
expression: "import other.{Two}\npub const a = Two\n"
snapshot_kind: text
---
----- SOURCE CODE
-- other.gleam
pub type One { Two }

-- main.gleam
import other.{Two}
pub const a = Two


----- COMPILED JAVASCRIPT
import * as $other from "../other.mjs";
import { Two } from "../other.mjs";

export const a = /* @__PURE__ */ new Two();
